clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/move_when_mut_borrowed/move_when_mut_borrowed.cbs
// RUN: %clang_cc1 -verify %s

typedef struct {
  int a;
} S;

S *borrow foo(int *borrow);
S *borrow bar(S *borrow, int);

int *owned test1(int *owned p) {
  S *borrow p1 = foo(&mut *p); // expected-note {{`*p` is borrowed here}}
  S *borrow p2 = bar(p1, 2); // expected-note {{`(*p1).a` is borrowed here}}
  int *owned q= p; // expected-error {{cannot move out of `p` because it is borrowed}}
  p1->a = 2; // expected-error {{cannot assign to `(*p1).a` because it is borrowed}}
  p2->a = 3;
  return q;
}

int *owned test2(int *owned p) {
  S *borrow p1 = (S *borrow)(S *)(int *)&mut *p;
  int *owned q= p;
  p1->a = 2;
  return q;
}
